--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightblue;
+  background-color: darkgrey;
 }
 
 h1 {
@@ -13,18 +13,19 @@ p {
   font-family: verdana;
   font-size: 15px;
   text-align: center;
+color: white;
 }
 
 h3 {
   text-align: center;
-  color: darkblue;
+  color: lightblue;
   font-family: verdana;
   font-size: 22px;
 }
 
 h5 {
   text-align: center;
-  color: darkblue;
+  color: lightblue;
   font-family: verdana;
   font-size: 17px;
 }
@@ -41,13 +42,13 @@ button {
   transition-duration: 0.4s;
   cursor: pointer;
   background-color: lightgrey;
-  color: black;
+  color: white;
   border: 2px solid darkblue;
   border-radius: 12px;
 }
 button:hover {
   background-color: lightblue;
-  color: white;
+  color: black;
   box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
