--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,61 +1,66 @@
 body {
-  background-color: #1E232E;
+    background-image: url("../IMG/fond.png");
+    background-repeat: repeat;
+    background-size:50%;
 }
 
 h1 {
   color: white;
-  font-family: "Gill Sans", sans-serif;
+  font-family: "Calibri", sans-serif;
   text-align: center;
   text-decoration: underline;
 }
 
 p {
-  font-family: verdana;
+  font-family: Roboto;
   font-size: 15px;
   text-align: center;
 color: white;
 }
 
 h3 {
-  text-align: center;
-  color: lightblue;
-  font-family: verdana;
-  font-size: 22px;
+    text-align: center;
+    color: #b94e4a;
+    font-family: Roboto;
+    font-size: 22px;
 }
 
 h5 {
-  text-align: center;
-  color: lightblue;
-  font-family: verdana;
-  font-size: 17px;
+    text-align: center;
+    color: lightblue;
+    font-family: Roboto;
+    font-size: 17px;
 }
-
+a {
+    color: white;
+    font-family: Roboto;
+}
 button {
-  border: none;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  -webkit-transition-duration: 0.4s; /* Safari */
-  transition-duration: 0.4s;
-  cursor: pointer;
-  background-color: lightgrey;
-  color: white;
-  border: 2px solid darkblue;
-  border-radius: 12px;
+    text-decoration-color : white;
+    border: none;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: #233e42;
+    color: #233e42;
+    border: 2px solid black;
+    border-radius: 12px;
 }
-button:hover {
-  background-color: lightblue;
-  color: black;
-  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
-}
+    button:hover {
+        background-color: #1f525a;
+        color: black;
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+    }
 
-ul{
-  font-family: verdana;
-  font-size: 15px;
-
+ul {
+    font-family: Roboto;
+    font-size: 15px;
 }
 
 footer {
@@ -65,6 +70,12 @@ footer {
    width: 100%;
    color: white;
    text-align: center;
+}
+
+p.layout{
+    color: red;
+    bottom: 100%;
+    margin-bottom:auto;
 }
 
 .center {
